@@ -1,116 +1,57 @@
 <?php
 if (!isset($gCms)) exit;
-$db =& $this->GetDb();
-$dict = NewDataDictionary($db);
+$db = $this->GetDb();
 
-if ($oldversion == '1.0')
-{
-	$this->CreateEvent('SearchInitiated');
-	$this->CreateEvent('SearchCompleted');
-	$this->CreateEvent('SearchItemAdded');
-	$this->CreateEvent('SearchItemDeleted');
-	$this->CreateEvent('SearchAllItemsDeleted');
+if( version_compare($oldversion,'1.50') < 1 ) {
+  $this->RegisterModulePlugin(true);
+  $this->RegisterSmartyPlugin('search','function','function_plugin');
 
-	$this->RegisterEvents();
+  try {
+    $searchform_type = new CmsLayoutTemplateType();
+    $searchform_type->set_originator($this->GetName());
+    $searchform_type->set_name('searchform');
+    $searchform_type->set_dflt_flag(TRUE);
+    $searchform_type->set_lang_callback('Search::page_type_lang_callback');
+    $searchform_type->set_content_callback('Search::reset_page_type_defaults');
+    $searchform_type->reset_content_to_factory();
+    $searchform_type->save();
 
-	$oldversion = '1.0.1';
-}
+    $template = $this->GetTemplate('displaysearch');
+    if( $template ) {
+      $tpl = new CmsLayoutTemplate();
+      $tpl->set_name('Search Form Sample');
+      $tpl->set_owner($uid);
+      $tpl->set_content($template);
+      $tpl->set_type($searchform_type);
+      $tpl->set_type_dflt(TRUE);
+      $tpl->save();
+      $this->DeleteTemplate('displaysearch');
+    }
 
-if ($oldversion == '1.0.1')
-{
-	$this->SetTemplate('displaysearch', $this->GetSearchHtmlTemplate());
-	$this->SetTemplate('displayresult', $this->GetResultsHtmlTemplate());
+    $searchresults_type = new CmsLayoutTemplateType();
+    $searchresults_type->set_originator($this->GetName());
+    $searchresults_type->set_name('searchresults');
+    $searchresults_type->set_dflt_flag(TRUE);
+    $searchresults_type->set_lang_callback('Search::page_type_lang_callback');
+    $searchresults_type->set_content_callback('Search::reset_page_type_defaults');
+    $searchresults_type->reset_content_to_factory();
+    $searchresults_type->save();
 
-	$oldversion = '1.0.2';
-}
-
-if ($oldversion == '1.0.2')
-{
-	$this->AddEventHandler('Core','ModuleUninstalled',false);
-	$this->SetPreference('searchtext','Enter Search...');
-	$oldversion = '1.0.3';
-}
-
-if ($oldversion == '1.0.3')
-{
-	$oldversion = '1.0.4';
-}
-
-if ($oldversion == '1.0.4')
-{
-	$sqlarray = $dict->DropTableSQL(cms_db_prefix().'module_search_items');
-	$dict->ExecuteSQLArray($sqlarray);
-	$db->DropSequence(cms_db_prefix().'module_search_items_seq');	
-	
-	$flds= "
-			id I KEY,
-			module_name C(100),
-			content_id I,
-			extra_attr C(100),
-			expires " . CMS_ADODB_DT;
-
-	$taboptarray = array('mysql' => 'TYPE=MyISAM');
-	$sqlarray = $dict->CreateTableSQL(cms_db_prefix().'module_search_items', $flds, $taboptarray);
-	$dict->ExecuteSQLArray($sqlarray);
-
-	$db->CreateSequence(cms_db_prefix()."module_search_items_seq");
-
-	$sqlarray = $dict->CreateIndexSQL('module_name', cms_db_prefix()."module_search_items", 'module_name');
-	$dict->ExecuteSQLArray($sqlarray);
-
-	$sqlarray = $dict->CreateIndexSQL('content_id', cms_db_prefix()."module_search_items", 'content_id');
-	$dict->ExecuteSQLArray($sqlarray);
-
-	$sqlarray = $dict->CreateIndexSQL('extra_attr', cms_db_prefix()."module_search_items", 'extra_attr');
-	$dict->ExecuteSQLArray($sqlarray);
-
-
-	$sqlarray = $dict->DropTableSQL(cms_db_prefix().'module_search_index');
-	$dict->ExecuteSQLArray($sqlarray);
-
-	$flds= "
-			item_id I,
-			word C(255),
-			count I
-		";
-
-	$taboptarray = array('mysql' => 'TYPE=MyISAM');
-	$sqlarray = $dict->CreateTableSQL(cms_db_prefix().'module_search_index', $flds, $taboptarray);
-	$dict->ExecuteSQLArray($sqlarray);
-
-	$sqlarray = $dict->CreateIndexSQL('count', cms_db_prefix()."module_search_index", 'count');
-	$dict->ExecuteSQLArray($sqlarray);
-	
-	$oldversion = '1.1';
-}
-
-if( version_compare($oldversion,'1.5') < 1 )
-  {
-    $flds = "word C(255) KEY,
-             count       I
-            ";
-    $taboptarray = array('mysql' => 'TYPE=MyISAM');
-    $sqlarray = $dict->CreateTableSQL(cms_db_prefix().'module_search_words', $flds, $taboptarray);
-    $dict->ExecuteSQLArray($sqlarray);
+    $template = $this->GetTemplate('displayresult');
+    if( $template ) {
+      $tpl = new CmsLayoutTemplate();
+      $tpl->set_name('Search Results Sample');
+      $tpl->set_owner($uid);
+      $tpl->set_content($template);
+      $tpl->set_type($searchresults_type);
+      $tpl->set_type_dflt(TRUE);
+      $tpl->save();
+      $this->DeleteTemplate('displayresult');
+    }
   }
-if( version_compare($oldversion,'1.6.2') < 1 )
-  {
-    // Indexes
-    $sqlarray = $dict->CreateIndexSQL(cms_db_prefix().'index_search_items',
-				       cms_db_prefix().'module_search_items',
-				       'module_name,content_id');
-    $dict->ExecuteSQLArray($sqlarray);
-    $sqlarray = $dict->CreateIndexSQL(cms_db_prefix().'index_search_index',
-				       cms_db_prefix().'module_search_index',
-				       'word');
-    $dict->ExecuteSQLArray($sqlarray);
+  catch( CmsException $e ) {
+    audit('',$this->GetName(),'Installation Error: '.$e->GetMessage());
   }
-
-if( version_compare($oldversion,'1.7.6') < 1 )
-  {
-    $this->RegisterModulePlugin(true);
-    $this->RegisterSmartyPlugin('search','function','function_plugin');
-  }
-
+}
 
 ?>
